--- a/templates/basefeedback.html
+++ b/templates/basefeedback.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/logo2.PNG') }}">
     <title> {% block title %}
         
     {% endblock title %}</title>
@@ -31,13 +32,13 @@
           <div class="image-text ">
         
               <span class="image ">
-                  <img src="{{ url_for('static', filename='images/logo.PNG') }}" alt="">
+                  <img src="{{ url_for('static', filename='images/logo2.PNG') }}" alt="">
               </span>
               <div >
               <span class="dash container-fluid"  >|</span>
               </div>
               <div class="text logo-text container">
-                  <span class="name " >Sanjay Ghodawat Polytechnic , Atigre</span>
+                  <span class="name " >Sanjay Ghodawat Institute , Atigre</span>
                  
                   <span class="profession ">Student Feedback System</span>
               </div>
