--- a/templates/letc.html
+++ b/templates/letc.html
@@ -45,7 +45,7 @@
 <body style="margin: 30px; font-size: 15px;">
     {% for t in tinfo %} 
     <div class="container" >
-    <img src="{{ url_for('static', filename='images/SGP Logo.jpg') }}" width="100%" height="auto">
+    <img src="{{ url_for('static', filename='images/SGI Logo.jpg') }}" width="100%" height="auto">
     <h3 style="text-align: center;"><strong>Department of {{deptnm[0]}}</strong></h3>
     
     <input type="hidden" value="{{deptnm[0]}}" id="deptnm">
