--- a/templates/letsf.html
+++ b/templates/letsf.html
@@ -46,7 +46,7 @@ window.onload = function() {
     {% for row in final %}
     {% for trec in row[2] %} 
     <div class="container" id="scn"  >
-    <img src="{{ url_for('static',  filename='images/SGP Logo.jpg') }}" width="100%" height="auto">
+    <img src="{{ url_for('static',  filename='images/SGI Logo.jpg') }}" width="100%" height="auto">
     <h5 style="text-align: center; font-size: 15px;"><strong>Strategy for Formative Feedback Improvement</strong></h5>
     <h5 style="text-align: center; font-size: 15px;"><strong>Department of {{deptnm[0]}}</strong></h5>
         <input type="hidden" value="{{deptnm[0]}}" id="deptnm">
