--- a/templates/student_login.html
+++ b/templates/student_login.html
@@ -135,9 +135,9 @@
 
         <div class="container glass content" id="loginform" style="max-width: 400px; height: auto; padding-left: 0; padding-right: 0; overflow:hidden">
           <div class="vlogin"  style="margin-bottom: 30px; min-height: 200px;">
-            <img src="{{ url_for('static', filename='images/3.png') }}" class="llog" style="z-index: 3;">
+            <img src="{{ url_for('static', filename='images/3.PNG') }}" class="llog" style="z-index: 3;">
             <h1   style="z-index: 3;"><pre >Student</pre></h1>
-            <video autoplay loop muted class="videolog" >
+            <video autoplay loop muted playsinline preload="metadata" class="videolog" >
               <source src="{{ url_for('static', filename='images/backv.mp4') }}" type="video/mp4">
           </video>
           </div>
