--- a/templates/letdown.html
+++ b/templates/letdown.html
@@ -44,7 +44,7 @@
 
 <body style="margin: 30px; font-size: 15px;">
     <div class="container" >
-    <img src="{{ url_for('static', filename='images/SGP Logo.jpg') }}" width="100%" height="auto">
+    <img src="{{ url_for('static', filename='images/SGI Logo.jpg') }}" width="100%" height="auto">
     <h3 style="text-align: center;"><strong>Department of {{deptnm[0]}}</strong></h3>
     <input type="hidden" value="{{deptnm[0]}}" id="deptnm">
     <hr style="height:2px;border-width:0;color:rgb(0, 0, 0);background-color:rgb(0, 0, 0)">
@@ -52,7 +52,7 @@
         <input type="hidden" id="facnm" value="{{facnms}}">
     <b>To,</b><br>
     <b >{{facnm}}</b><br>
-    <b> SGP,Atigre.</b><br>
+    <b> SGI, Atigre</b><br>
     <br><div class="mx-auto" style="width: 500px;"><b>Subject:</b> Regarding Analysis of Student Feedback</div><br>
     Dear Sir/Madam,<br><br>
     <p style="text-indent: 15%;"> According to the record, you were incharge of the subjects 
