--- a/templates/login.html
+++ b/templates/login.html
@@ -4,8 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='images/logo2.PNG') }}">
     <!-- Bootstrap CSS -->
-    <link rel="icon" href="Images/blackpb.png" type="image/x-icon" sizes="any">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
       <link rel="stylesheet" href="homecss.css">
       <link rel="stylesheet" href="login.css">
@@ -129,9 +129,9 @@
   
         <div class="container glass content" id="loginform" style="max-width: 400px; height: auto; padding-left: 0; padding-right: 0; overflow:hidden">
           <div class="vlogin"  style="margin-bottom: 30px; min-height: 200px;">
-            <img src="{{ url_for('static', filename='images/3.png') }}" class="llog animate__animated animate__bounceInRight  animate__slow" style="z-index: 3;">
+            <img src="{{ url_for('static', filename='images/logo2.PNG') }}" class="llog animate__animated animate__bounceInRight  animate__slow" style="z-index: 3;">
             <h1   class=" animate__animated animate__bounceInRight  animate__slow" style="z-index: 3;"><pre >Admin</pre></h1>
-            <video autoplay loop muted class="videolog" >
+            <video autoplay loop muted playsinline preload="metadata" class="videolog" >
               <source src="{{ url_for('static', filename='images/backv.mp4') }}" type="video/mp4">
           </video>
           </div>
@@ -188,10 +188,10 @@
 
         <div class="container glass form--hidden" id="signupform" style="max-width: 400px; overflow: hidden; height: auto; padding-left: 0; padding-right: 0;">
             <div class="vlogin"  style="margin-bottom: 30px; min-height: 200px;">
-              <img src="images/3.PNG" class="llog" style="z-index: 3;">
+              <img src="{{ url_for('static', filename='images/3.PNG') }}" class="llog" style="z-index: 3;">
               <h1   style="z-index: 3;"><pre >Student</pre></h1>
-              <video autoplay loop muted class="videolog" >
-                <source src="images/backv.mp4" type="video/mp4">
+              <video autoplay loop muted playsinline preload="metadata" class="videolog" >
+                <source src="{{ url_for('static', filename='images/backv.mp4') }}" type="video/mp4">
             </video>
             </div>
             <div class="login" style="margin-left:30px ; margin-right: 30px; " >
