feat: Extend 2FA to Sub-Admin users
- Allow both Admin and Sub-Admin users to access 2FA setup
- Updated base.html template to show 2FA menu for both user types
- Sub-Admins can now enable/disable 2FA for their accounts

--- a/templates/base.html
+++ b/templates/base.html
@@ -102,6 +102,8 @@
                     <p>Update Profile</p>
                   </li>
                 </a>
+                  {% endif %}
+                {% if user == "Admin" or user == "Sub-Admin" %}
                 <a href="{{ url_for('setup_2fa') }}" class="sub-link">
                 <li class="sub-item">
                     <span class="material-icons-outlined">security</span>
